--- a/index.html
+++ b/index.html
@@ -3,33 +3,56 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meine persönliche Startseite</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>Über mich</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      color: #333;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      border-radius: 10px;
+      background-color: #ffffff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      text-align: center;
+      color: #007BFF;
+    }
+    .section {
+      margin-bottom: 20px;
+    }
+    .section h2 {
+      color: #555;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Willkommen auf meiner Seite!</h1>
-    <p>Ich bin Max, angehender Informatiker EFZ.</p>
-  </header>
+  <h1>Über mich</h1>
 
-  <main>
-    <section>
-      <h2>Über mich</h2>
-      <p>Ich interessiere mich für Webentwicklung, Games und Technik.</p>
-    </section>
+  <div class="section">
+    <h2> Wer bin ich?</h2>
+    <p>Ich bin Laurentiu Berdila, ein motivierter Schüler der sich für Informatik interessiert. Ich arbeite mit C#, HTML und Datenbanken.</p>
+  </div>
 
-    <section>
-      <h2>Meine Lieblingslinks</h2>
-      <div id="lang">
-        <div><a href="https://www.github.com" target="_blank">GitHub</a></div>
-        <div><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
-        <div><a href="https://www.wikipedia.org" target="_blank">Wikipedia</a></li>
-      </div>
-    </section>
-  </main>
+  <div class="section">
+    <h2>Meine Stärken</h2>
+    <ul>
+      <li>Selbstständiges Arbeiten</li>
+      <li>Logisches Denken</li>
+      <li>Teamfähigkeit</li>
+    </ul>
+  </div>
 
-  <footer>
-    <p>© 2025 Max Muster</p>
-  </footer>
+  <div class="section">
+    <h2>Was ich gerne mache</h2>
+    <p>Ich programmiere gerne und lerne Neues über Informatik. In meiner Freizeit trainiere ich, höre Musik oder spiele Games.</p>
+  </div>
+
+  <div class="section">
+    <h2> Mein Ziel für das nächste Jahr</h2>
+    <p>Ich möchte noch besser im Programmieren werden und weiter sehen wie ich als Mensch sowie Programmierer besser werde.</p>
+  </div>
 </body>
 </html>
