--- a/index.html
+++ b/index.html
@@ -4,55 +4,66 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Über mich</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      color: #333;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      border-radius: 10px;
-      background-color: #ffffff;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h1 {
-      text-align: center;
-      color: #007BFF;
-    }
-    .section {
-      margin-bottom: 20px;
-    }
-    .section h2 {
-      color: #555;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Über mich</h1>
+  <header>
+    <h1>Laurentiu Berdila</h1>
+    <p>Schüler</p>
+  </header>
 
-  <div class="section">
-    <h2> Wer bin ich?</h2>
-    <p>Ich bin Laurentiu Berdila, ein motivierter Schüler der sich für Informatik interessiert. Ich arbeite mit C#, HTML und Datenbanken.</p>
-  </div>
+  <main>
+    <section class="section">
+      <h2>Wer bin ich?</h2>
+      <p>Ich bin Laurentiu Berdila, ein motivierter Schüler, der sich für Informatik interessiert. Ich arbeite mit C#, HTML und Datenbanken.</p>
+    </section>
 
-  <div class="section">
-    <h2>Meine Stärken</h2>
-    <ul>
-      <li>Selbstständiges Arbeiten</li>
-      <li>Logisches Denken</li>
-      <li>Teamfähigkeit</li>
-    </ul>
-  </div>
+    <section class="section">
+      <h2>Meine Stärken</h2>
+      <ul>
+        <li>Selbstständiges Arbeiten</li>
+        <li>Logisches Denken</li>
+        <li>Teamfähigkeit</li>
+      </ul>
+    </section>
 
-  <div class="section">
-    <h2>Was ich gerne mache</h2>
-    <p>Ich programmiere gerne und lerne Neues über Informatik. In meiner Freizeit trainiere ich, höre Musik oder spiele Games.</p>
-  </div>
+    <section class="section">
+      <h2>Was ich gerne mache</h2>
+      <p>Ich programmiere gerne und lerne Neues über Informatik. In meiner Freizeit trainiere ich, höre Musik oder spiele Games.</p>
+    </section>
 
-  <div class="section">
-    <h2> Mein Ziel für das nächste Jahr</h2>
-    <p>Ich möchte noch besser im Programmieren werden und weiter sehen wie ich als Mensch sowie Programmierer besser werde.</p>
-  </div>
+    <section class="section">
+      <h2>Meine Projekte</h2>
+      <ul>
+        <li>Aufgabenverwaltung mit C# und SQL</li>
+        <li>Webseite mit HTML/CSS</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Mein Ziel für das nächste Jahr</h2>
+      <p>Ich möchte noch besser im Programmieren werden und mich als Mensch sowie Entwickler weiterentwickeln.</p>
+    </section>
+
+    <section class="section">
+      <h2>Kontakt</h2>
+      <form>
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" placeholder="Max Mustermann"><br><br>
+
+        <label for="email">E-Mail:</label><br>
+        <input type="email" id="email" name="email" placeholder="max@mail.com"><br><br>
+
+        <label for="message">Nachricht:</label><br>
+        <textarea id="message" name="message" rows="4" placeholder="Deine Nachricht..."></textarea><br><br>
+
+        <button type="submit">Absenden</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Laurentiu Berdila – Lernatelier</p>
+  </footer>
 </body>
 </html>
