--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
   <header>
     <h1>Laurentiu Berdila</h1>
     <p>Schüler</p>
+    <nav>
+      <ul class="navbar">
+        <li><a href="#about">Über mich</a></li>
+        <li><a href="#skills">Stärken</a></li>
+        <li><a href="#hobbies">Hobbys</a></li>
+        <li><a href="#projects">Projekte</a></li>
+        <li><a href="#goal">Ziel</a></li>
+        <li><a href="#contact">Kontakt</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
-    <section class="section">
+    <section class="section" id="about">
       <h2>Wer bin ich?</h2>
+      <img src="profilbild.jpg" alt="Profilbild" class="profilbild">
       <p>Ich bin Laurentiu Berdila, ein motivierter Schüler, der sich für Informatik interessiert. Ich arbeite mit C#, HTML und Datenbanken.</p>
     </section>
 
-    <section class="section">
+    <section class="section" id="skills">
       <h2>Meine Stärken</h2>
       <ul>
         <li>Selbstständiges Arbeiten</li>
@@ -27,12 +38,12 @@
       </ul>
     </section>
 
-    <section class="section">
+    <section class="section" id="hobbies">
       <h2>Was ich gerne mache</h2>
       <p>Ich programmiere gerne und lerne Neues über Informatik. In meiner Freizeit trainiere ich, höre Musik oder spiele Games.</p>
     </section>
 
-    <section class="section">
+    <section class="section" id="projects">
       <h2>Meine Projekte</h2>
       <ul>
         <li>Aufgabenverwaltung mit C# und SQL</li>
@@ -40,12 +51,12 @@
       </ul>
     </section>
 
-    <section class="section">
+    <section class="section" id="goal">
       <h2>Mein Ziel für das nächste Jahr</h2>
       <p>Ich möchte noch besser im Programmieren werden und mich als Mensch sowie Entwickler weiterentwickeln.</p>
     </section>
 
-    <section class="section">
+    <section class="section" id="contact">
       <h2>Kontakt</h2>
       <form>
         <label for="name">Name:</label><br>
